--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ecommerce website</title>
+    <title>Ecommerce website by Amos_Idy</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -22,11 +22,13 @@
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>+08070612458</span>
             </div>
-            <span>Get 50% off on Selected Items</span>
+            <span class="selected-items hide-mobile"
+              >Get 50% off on Selected Items</span
+            >
           </div>
-          <div class="slash"></div>
+          <div class="slash hide-mobile"></div>
           <div class="greenbar-right">
-            <span class="shop-now">Shop Now</span>
+            <span class="shop-now hide-mobile">Shop Now</span>
             <div class="location-language">
               <div>
                 <span>Eng</span>
@@ -40,7 +42,55 @@
           </div>
         </div>
       </div>
-      <nav></nav>
+      <nav class="navigation-section-whitebar">
+        <div class="container">
+          <div class="logo">
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e86ab4c21faa7bc0bd90dd_Logo.svg"
+              alt="Logo loading....."
+            />
+          </div>
+          <!-------- Start of navigation-whitebar-categories ------->
+          <div class="navigation-whitebar-categories hide-mobile">
+            <span class="navigation-section-categories-text">
+              <button class="categories-btn">
+                <p>Category</p>
+                <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
+              </button>
+            </span>
+            <span>Deals</span>
+            <span>What's New</span>
+            <span>Delivery</span>
+          </div>
+          <!-------- Start of navigation-section-searchbar-holder ------->
+          <div class="navigation-section-searchbar-holder">
+            <input
+              type="search"
+              placeholder="Search product..."
+              name=""
+              id=""
+              class="navigation-section-searchbar"
+            />
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </div>
+          <div class="navigation-section-account-cart">
+            <span>
+              <i class="fa fa-user" aria hidden="true"></i>
+              <p>Account</p>
+            </span>
+            <span class="">
+              <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+              <span>
+                <p>Cart</p>
+                <div class="red">2</div>
+              </span>
+            </span>
+          </div>
+          <div class="hambugerMenu-btn">
+            <i class="fa fa-bars" aria-hidden="true"></i>
+          </div>
+        </div>
+      </nav>
     </header>
   </body>
 </html>
