--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <link rel="stylesheet" href="/CSS/index.css" />
   </head>
   <body>
+    <!-------- Header ------->
     <header>
       <div class="greenbar">
         <div class="container">
           <div class="greenbar-left">
             <div class="greenbar-phone">
               <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>+2348026238104</span>
+              <span>+08070612458</span>
             </div>
             <span class="selected-items hide-mobile"
               >Get 50% off on Selected Items</span
@@ -73,14 +74,14 @@
             />
             <i class="fa fa-search" aria-hidden="true"></i>
           </div>
-          <div class="navigation-section-account-cart">
+          <div class="navigation-section-account-cart hide-mobile">
             <span>
               <i class="fa fa-user" aria hidden="true"></i>
               <p>Account</p>
             </span>
-            <span class="">
+            <span>
               <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-              <span>
+              <span class="red-parent">
                 <p>Cart</p>
                 <div class="red">2</div>
               </span>
@@ -92,5 +93,75 @@
         </div>
       </nav>
     </header>
+
+    <!-------- Hero section ------->
+    <section class="hero-section">
+      <div class="container">
+        <div class="hero-section-captions">
+          <h1>Shopping And Department Store.</h1>
+          <p>
+            Shopping is a bit of a relaxing hobby for me, which is sometimes
+            troubling for the bank balance.
+          </p>
+          <button>Learn More</button>
+        </div>
+        <div class="hero-section-images">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+      </div>
+    </section>
+
+    <!-------- Categories section ------->
+    <section class="categories-section">
+      <div class="container">
+        <h2>Shop Our categories</h2>
+        <div class="categories-section-items-holder">
+          <div>
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e8c4e570738029a725e686_Furniture-min.png"
+              alt=""
+            />
+            <span>Furniture</span>
+          </div>
+          <div>
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e8c4e52d6553668075697e_hand%20bag-min.png"
+              alt=""
+            />
+            <span>Hand Bag</span>
+          </div>
+          <div>
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e8c4e460afc22b7ea53520_books-min.png"
+              alt=""
+            />
+            <span>Books</span>
+          </div>
+          <div>
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e8c4e754ac2e32897cb53b_tech-min.png"
+              alt=""
+            />
+            <span>Tech</span>
+          </div>
+          <div>
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e8c4e64b769118272f244f_sneakers-min.png"
+              alt=""
+            />
+            <span>Sneakers</span>
+          </div>
+          <div>
+            <img
+              src="https://assets-global.website-files.com/63e857eaeaf853471d5335ff/63e8c4e71eb4ad6d07e7568f_travel-min.png"
+              alt=""
+            />
+            <span>Travel</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
